<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="com.example.mara.roomiez.activities.UserDescriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/cardViewGrey"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="0.2"
                android:src="@drawable/user_dummie" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/dummie_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/dummie_age"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/dummie_location"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/mountain_dark_15"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.2"
                android:src="@drawable/selected_house" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/city_hint"
                android:paddingTop="3dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/mountain_dark_25"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.2"
                android:src="@drawable/numbers" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/numbers_hint"
                android:paddingTop="3dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/mountain_dark_25"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.2"
                android:src="@drawable/numbers" />

            <Spinner
                android:id="@+id/type_real_estate_spinner"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
