<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_photo"
        android:layout_width="206dp"
        android:layout_height="206dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
         />

    <TextView
        android:id="@+id/user_name_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_photo"
        android:layout_marginTop="18dp"
        android:padding="18dp"
        android:text="@string/dummie_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_age"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/description_line"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            app:cardBackgroundColor="@color/mountain_gray"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/selected_user" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="left"
                    android:text="@string/my_profile"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/go_to_profile_arrow"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/arrow" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/wish_list_line"
            android:height="50dp"
            app:cardBackgroundColor="@color/mountain_gray_transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/star"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="left"
                    android:text="@string/wish_list"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/go_to_wish_list"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/arrow" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/messages_line"
            android:height="50dp"
            app:cardBackgroundColor="@color/mountain_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/message"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="left"
                    android:text="@string/messages"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/go_to_messages"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/arrow" />


            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/log_out"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:backgroundTint="@color/buttonGrey"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/exit"
        android:layout_margin="15dp"/>

</RelativeLayout>